Prevent ships from being placed overlapping Changing alignment does overlap however

--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,7 @@ body {
   padding-bottom: 9px;
   padding-right: 36px;
   top: 10px;
-  left: 30px;
+  left: 30px
 }
 
 #span2 {
